--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # Local .terraform directories
 **/.terraform/*
 
+/.terraform/
+/.terraform.d/
+
+# Other local directories
+/csv/
+/bin/
+/.vscode/
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -37,6 +45,3 @@ terraform.rc
 
 # Ignore Terraform Lock file
 terraform.lock.hcl
-
-# Ignore all files in any directory named csv
-csv/
